--- a/main.css
+++ b/main.css
@@ -27,11 +27,35 @@
 
 /*  Formula to find width of a sigle column
     scw = (100 – (m * (mc – 1))) / mc
-    where SCW is single column width
-    m is margin
-    mc is maximum columns
+    where SCW = single column width
+    m = margin
+    mc = maximum columns
     result of single column width is 6.5 (6.5%) 
   
     Formula to find the width of the remainin columns
+    cw = (scw * cs) + (m * (cs – 1))
+    where cw = column width
+    scw = single column width
+    cs = column span (vary from 2 to 12 in this case, because maximum column span is 12)
+    m = margin
+    column-1 = 6.5%
+    column-2 = 15%
+    column-3 = 23.5%
+    column-4 = 32%
+    column-5 = 40.5%
+    column-6 = 49%
+    column-7 = 57.5%
+    column-8 = 66%
+    column-9 = 74.5%
+    column-10 = 83%
+    column-11 = 91.5%
+    column-12 = 100%
     
+    Easier way to find column width after column-1 in this case where margin is 2 and column span is 12
+    cw(x)=(cs(x-1)+2)+cw1
+    where cw = column width
+    x number of columns span
+    cs = column span
+    2 in this case, formula might work with m = margin instead of 2
+    cw1 = column width 1 == scw(single column width)
 */
